welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:2: error: not found: value x
x=nums(1)
^maxValue:5: error: not found: value x
	if (nums(i)>=x){
                     ^maxValue:6: error: not found: value x
		x=nums(i)
                ^maxValue:10: error: not found: value x
return x
       ^